[gd_scene load_steps=3 format=2]

[ext_resource path="res://script/Node2D.gd" type="Script" id=1]
[ext_resource path="res://imagens/Captura de tela 2023-03-09 150324.png" type="Texture" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Eisenhower360" type="Sprite" parent="."]
position = Vector2( 516, 99 )
scale = Vector2( 0.695056, 0.683146 )
texture = ExtResource( 2 )
offset = Vector2( -159.944, 211.082 )

[node name="btnAnalise" type="Button" parent="."]
margin_left = 312.0
margin_top = 399.0
margin_right = 495.0
margin_bottom = 434.0
text = "Enviar matriz para an√°lise"

[node name="BtnImpUrgMenos" type="Button" parent="."]
margin_left = 234.0
margin_top = 79.0
margin_right = 254.0
margin_bottom = 99.0
rect_pivot_offset = Vector2( 175, 22 )
text = "-"

[node name="BtnImpUrgMais" type="Button" parent="."]
margin_left = 358.0
margin_top = 79.0
margin_right = 378.0
margin_bottom = 99.0
rect_pivot_offset = Vector2( 51, 22 )
text = "+"

[node name="BtnImpNurgMenos" type="Button" parent="."]
margin_left = 447.0
margin_top = 80.0
margin_right = 467.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( -127, 20 )
text = "-"

[node name="BtnImpNurgMais" type="Button" parent="."]
margin_left = 571.0
margin_top = 80.0
margin_right = 591.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( -251, 20 )
text = "+"

[node name="BtnNImpUrgMenos" type="Button" parent="."]
margin_left = 236.0
margin_top = 279.0
margin_right = 256.0
margin_bottom = 299.0
rect_pivot_offset = Vector2( 197, -41 )
text = "-"

[node name="BtnNImpUrgMais" type="Button" parent="."]
margin_left = 360.0
margin_top = 279.0
margin_right = 380.0
margin_bottom = 299.0
rect_pivot_offset = Vector2( 73, -41 )
text = "+"

[node name="BtnNImpNUrgMenos" type="Button" parent="."]
margin_left = 451.0
margin_top = 282.0
margin_right = 471.0
margin_bottom = 302.0
text = "-"

[node name="BtnNImpNUrgMais" type="Button" parent="."]
margin_left = 575.0
margin_top = 282.0
margin_right = 595.0
margin_bottom = 302.0
text = "+"

[node name="LblImportanteUrgente" type="Label" parent="."]
margin_left = 271.0
margin_top = 149.0
margin_right = 339.0
margin_bottom = 163.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tempo: 0h"

[node name="LblImportanteNUrgente" type="Label" parent="."]
margin_left = 485.0
margin_top = 144.0
margin_right = 555.0
margin_bottom = 158.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tempo: 0h"

[node name="LblNImportanteUrgente" type="Label" parent="."]
margin_left = 277.0
margin_top = 333.0
margin_right = 345.0
margin_bottom = 347.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tempo: 0h"

[node name="LblNImportanteNUrgente" type="Label" parent="."]
margin_left = 485.0
margin_top = 335.0
margin_right = 553.0
margin_bottom = 349.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tempo: 0h"

[node name="ProgressBarImpUrg" type="ProgressBar" parent="."]
margin_left = 263.0
margin_top = 79.0
margin_right = 349.0
margin_bottom = 100.0
max_value = 24.0

[node name="ProgressBarImpNUrg" type="ProgressBar" parent="."]
margin_left = 476.0
margin_top = 80.0
margin_right = 562.0
margin_bottom = 101.0
max_value = 24.0

[node name="ProgressBarNImpUrg" type="ProgressBar" parent="."]
margin_left = 265.0
margin_top = 279.0
margin_right = 351.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 91, -118 )
max_value = 24.0

[node name="ProgressBarNImpNUrg" type="ProgressBar" parent="."]
margin_left = 480.0
margin_top = 282.0
margin_right = 566.0
margin_bottom = 303.0
max_value = 24.0

[connection signal="pressed" from="btnAnalise" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="BtnImpUrgMenos" to="." method="_on_BtnImpUrgMenos_pressed"]
[connection signal="pressed" from="BtnImpUrgMais" to="." method="_on_BtnImpUrgMais_pressed"]
[connection signal="pressed" from="BtnImpNurgMenos" to="." method="_on_BtnImpNurgMenos_pressed"]
[connection signal="pressed" from="BtnImpNurgMais" to="." method="_on_BtnImpNurgMais_pressed"]
[connection signal="pressed" from="BtnNImpUrgMenos" to="." method="_on_BtnNImpUrgMenos_pressed"]
[connection signal="pressed" from="BtnNImpUrgMais" to="." method="_on_BtnNImpUrgMais_pressed"]
[connection signal="pressed" from="BtnNImpNUrgMenos" to="." method="_on_BtnNImpNUrgMenos_pressed"]
[connection signal="pressed" from="BtnNImpNUrgMais" to="." method="_on_BtnNImpNUrgMais_pressed"]
